# ML-MSc-thesis

./: .gitignore  CLAUDE.md  README.md  STATUS.md  THESIS_GUIDE.md  doctor_presentation_questions.md  pyproject.toml
configs/: causal_effect_v1.yaml  hosp_daily.yaml  hosp_daily_v2.yaml  hosp_daily_v3.yaml  hourly_sim.yaml  hourly_sim_hardening.yaml  icu_readmit.yaml  longitudinal_v1.yaml  readmission.yaml  readmission_head_v1.yaml  readmission_v4.yaml  schema_transition_v1.yaml  sepsis_dataset.yaml  sim_hourly_hardening_v1.yaml  sim_hourly_v1.yaml  sim_v1.yaml  transition_hourly_mimiccode.yaml  transition_v1.yaml  transition_v2_multi.yaml  transition_v3_mimiccode_hourly.yaml
docs/: Kick-off Meeting Agenda_ CARE-AI Project (2).pptx  caresim_change_proposals.md  caresim_playbook.md  caresim_transformer_landscape_review.md  caresim_world_model_research.md  causal_transformer_structural_mask_report_english.md  chatgpt_thesis_project_instructions.md  dagaware_transformer_model_breakdown.md  icu_readmit_artifacts.md  icu_readmit_caresim_selected_causal_transformer.md  icu_readmit_dagaware_selected_causal_transformer.md  icu_readmit_ddqn_explainer.md  icu_readmit_markovsim_selected_causal.md  icu_readmit_offline_ddqn_explainer.md  icu_readmit_pipeline.md  icu_readmit_reward_methods.md  icu_readmit_rl_explainer.md  icu_readmit_rl_pipeline.md  mimic_hosp_reference.md  sepsis_pipeline.md  sepsis_rl_pipeline.md  step_09_noncausal_interface_recommendation.md  step_09_state_action_recommendation.md  step_10_noncausal_replay_preprocessing.md  step_11_noncausal_caresim.md  (+3 more)
(+448 files in other folders)
